--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -20,6 +20,7 @@ dependencies {
 
     //noinspection GradleDependency
     implementation 'androidx.appcompat:appcompat:1.2.0'
+    //added implementation ftc dashboard
     implementation 'com.acmerobotics.dashboard:dashboard:0.4.16'
 }
 
